# AIronVisionC

./: .env.example  .gitignore  README.md  documnetacion_propia.txt
backend/: .env.example  main.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  supabase_client.py
backend/app/modules/health/: router.py
docs/: BUSINESS_IDEAS.md  CV_VALIDATION_NOTES.md  documentacion_propia.txt
ml/: 01_pose_detection_image.ipynb  02_pose_detection_video.ipynb
ml/notebooks/: 01_pose_detection_image.ipynb
